--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -12,7 +12,7 @@ From snapshotting we see view $\rho$ as  a function of time. In the case of edit
 
 \begin{figure}[!t]
 \centering
-\includegraphics[width=0.9\columnwidth]{rho_combined.png}.
+\includegraphics[width=0.9\columnwidth]{Figures/rho_combined.png}.
 \caption{$\rho$ over time, by category and type}
 \label{fig:rhotime}
 \end{figure}
@@ -32,7 +32,7 @@ For articles, the solutions have varied solutions, possibly including a negative
 
 \begin{figure}[!t]
 \centering
-\includegraphics[width=0.9\columnwidth]{landscape.png}.
+\includegraphics[width=0.9\columnwidth]{Figures/landscape.png}.
 \caption{Landscape}
 \label{fig:landscape}
 \end{figure}
