half way in the method section

--- a/paper/biPartiteWikipedia.tex
+++ b/paper/biPartiteWikipedia.tex
@@ -34,10 +34,10 @@
 
 \begin{document}
 
-\title{The Article/Editor Ranking : Bringing Order to Wikipedia}
+\title{Bringing Order to Wikipedia\\ by Ranking Articles and Editors}
 %\subtitle{[Extended Abstract]
 %\titlenote{A full version of this paper is available as
-%\textit{Author's Guide to Preparing ACM SIG Proceedings Using
+%\textit{Author's Guide to Preparing AC M SIG Proceedings Using
 %\LaTeX$2_\epsilon$\ and BibTeX} at
 %\texttt{www.acm.org/eaddress.htm}}}
 %
@@ -93,14 +93,14 @@ Thomas Maillart\\
        \affaddr{School of Information}\\
        \affaddr{ University of California, Berkeley, 102 South Hall}\\
        \affaddr{Berkeley, CA 94720}\\
-       \email{thomas.maillart@ischool.berkeley.edu}
+       \email{thomas.maillart\\@ischool.berkeley.edu}
 % 3rd. author
 \alignauthor
 John Chuang\\
        \affaddr{School of Information}\\
        \affaddr{ University of California, Berkeley, 102 South Hall}\\
        \affaddr{Berkeley, CA 94720}\\
-       \email{chuang@ischool.berkeley.edu}
+       \email{chuang\\@ischool.berkeley.edu}
 }
 
 
@@ -172,13 +172,7 @@ John Chuang\\
 
 \input{sections/data.tex}
 
-
 \input{sections/results.tex}
-
-
-\input{sections/discussion.tex}
-
-\input{sections/limitations.tex}
 
 \input{sections/discussion.tex}
 
@@ -294,7 +288,8 @@ John Chuang\\
 % initial runs of your .tex file to
 % produce the bibliography for the citations in your paper.
 \bibliographystyle{abbrv}
-\bibliography{sigproc}  
+%\bibliography{sigproc}
+\bibliography{sigproc,tmaillart}  
 
 % sigproc.bib is the name of the Bibliography in this case
 % You must have a proper ".bib" file
