--- a/paper/sections/method.tex
+++ b/paper/sections/method.tex
@@ -14,72 +14,65 @@ When ordered on both dimensions by decreasing order of editors who have changed 
 
 \begin{equation}
 \begin{cases}
- w_{e}^{(0)} = \sum_{a=1}^{N_{a}} \mathbf{M}_{ea} \equiv k_e\\
- w_{a}^{(0)} = \sum_{e=1}^{N_{e}} \mathbf{M}_{ea}  \equiv k_a.\\
+ d_{e}^{(0)} = \sum_{a=1}^{N_{a}} \mathbf{M}_{ea} \equiv k_e\\
+ u_{a}^{(0)} = \sum_{e=1}^{N_{e}} \mathbf{M}_{ea}  \equiv k_a.\\
 \end{cases}
+\label{HHinit}
 \end{equation}
 
 The principal argument for going to further steps is following : the zero\textsuperscript{th} is quite rough: the number of articles modified tells actually little on expertise of editors because we don't know the value of the modified articles. Similarly the number of editors tells little about the quality of an article because the expertise of the editors who have modified the article is unknown. The second step of the algorithm is therefore the following: if an article has been changed by editors who edited more articles, then the quality of the article should be higher. Similarly, if an editor has edited articles that have been edited by more editors, then the expertise of the editor should be higher {\bf [(the only reason for making this claim is the collaborative nature of Wikipedia, and learning by imitation)]}.  Accordingly, the third step is the following : if an article has been changed by editors who edited more articles, which in turn have been edited by more editors, then the quality of the article should be higher. Similarly, if an editor has edited articles that have been edited by more editors, who in turn have edited more articles, then the expertise of the editor should be higher. The algorithm goes on recursively, incorporating the quality (resp. expertise) information of the article (resp. editor) at the previous step. The way the iterative step was initially formulated is the following, 
 
 \begin{equation}
 \begin{cases}
- d_{e}^{(n+1)} = \frac{1}{k_a} \sum_{a=1}^{N_{a}} \mathbf{M}_{ea} \mathbf{w}_{a}^{(n)}\\
- w_{a}^{(n+1)} = \frac{1}{k_e}\sum_{e=1}^{N_{e}} \mathbf{M}_{ea} \mathbf{w}_{e}^{(n)}\\
+ \mathbf{d}_{e}^{(n+1)} = \frac{1}{\mathbf{k}_a} \sum_{a=1}^{N_{a}} \mathbf{M}_{ea} \mathbf{u}_{a}^{(n)}\\
+ \mathbf{u}_{a}^{(n+1)} = \frac{1}{\mathbf{k}_e}\sum_{e=1}^{N_{e}} \mathbf{M}_{ea} \mathbf{d}_{e}^{(n)}\\
 \end{cases}
+\label{HHalgo}
 \end{equation}
 
-While it is following very well the intuition behind the algorithm, ``The major problem of this formulation is that it is a case of consensus dynamics \cite{shamma2007cooperative}, i.e. the state of a node at iteration t is just the average of the state of its neighbors at iteration t-1". This approach converges rapidly to a fixed point, which is undesirable if the goal is precisely to discriminate between editors and articles as best as possible.
+where $d_{e}$ stands for diversification of editors and $u_{a}$ for the ubiquity of articles.
 
-The idea of Caldarelli et al. \cite{caldarelli2012network} is to treat the problem as a problem of a random walker jumping from one node to another along the edges of the bi-partite network. In other words, the random walker jumps with some probability from on editor to a linked article, or from an article to a linked editor. 
-
-We define the weights of vertices to be proportional to the time that an {\it appropriately biased} random walker on the network spends on them in the large time limit \cite{zlatic2010}. We explain a little later why the biases are important. Such weights are the generalization of $k_c$ and $k_p$ and give a measure of competitiveness of countries and of ``dis-quality" of products (here it is quality of articles !!!).
-
-
-{\bf tell about the stochastic process here} \cite{caldarelli2012network}
-
-{\bf say that it is a ranking algorithm. We care only about the ranking of articles and editors}
-
-The algorithm at step $n$ then writes,
+{\bf While it is following very well the intuition behind the algorithm, ``The major problem of this formulation is that it is a case of consensus dynamics \cite{shamma2007cooperative}, i.e. the state of a node at iteration t is just the average of the state of its neighbors at iteration t-1".[ reformulate] } This approach converges rapidly to a fixed point, which is undesirable if the goal is precisely to discriminate as best as possible between editors and articles. The idea of Caldarelli et al. \cite{caldarelli2012network} is to treat the problem as a problem of a {\it random walker} jumping from one node to another along the edges of the bi-partite network. In other words, the random walker jumps with some probability from an editor to a linked article, or from an article to a linked editor. The weights of vertices are proportional to the time spent by the random walker in the large time limit \cite{zlatic2010}.  The intuition is that an editor (resp. an article) with more links from articles (resp. from editors) has more chances to be visited by the random walker. However, if the random walker is unbiased, the algorithm is not different from the zero\textsuperscript{th} order of the reflections method given by (\ref{HHinit}). Therefore, some biases $\alpha$ (resp. $\beta$) on the probability to jump from an article to an editor (resp. from an editor to an article). Such weights are the generalization of $k_e$ and $k_a$, and give a measure of editors' expertise and of articles' quality. At the $n$\textsuperscript{th} step, the algorithm writes,
 
 \begin{equation}
 \begin{cases}
- w^{(n+1)}_c (\alpha,\beta) = \sum_{p=1}^{N_p}  \mathbf{G}_{cp}(\beta) \mathbf{w}^{(n)}_p (\alpha,\beta)\\
-w^{(n+1)}_p (\alpha,\beta) = \sum_{c=1}^{N_c}  \mathbf{G}_{pc}(\beta) \mathbf{w}^{(n)}_c (\alpha,\beta)\\
+ \mathbf{w}^{(n+1)}_e (\alpha,\beta) = \sum_{p=1}^{N_a}  \mathbf{G}_{cp}(\beta) \mathbf{w}^{(n)}_a (\alpha,\beta)\\
+\mathbf{w}^{(n+1)}_a (\alpha,\beta) = \sum_{c=1}^{N_e}  \mathbf{G}_{pc}(\beta) \mathbf{w}^{(n)}_e (\alpha,\beta),\\
 \end{cases}
 \end{equation}
 
-where the Markov transition matrix $\mathbf{\hat{G}}$ is given by 
+with the Markov transition matrices $\mathbf{G}_{ea}(\beta)$ and $\mathbf{G}_{ae}(\alpha)$ control the biased of the random walk and are given by 
 
 \begin{equation}
 \begin{cases}
-\mathbf{G}_{cp}(\beta) = \frac{\mathbf{M}_{cp} \mathbf{k}_{c}^{-\beta}}{\sum_{c' = 1}^{N_c} \mathbf{M}_{c'p} \mathbf{k}_{c'}^{-\beta}}\\
-\mathbf{G}_{cp}(\beta) = \frac{\mathbf{M}_{cp} \mathbf{k}_{c}^{-\beta}}{\sum_{c' = 1}^{N_c} \mathbf{M}_{c'p} \mathbf{k}_{c'}^{-\beta}}\\
+\mathbf{G}_{ea}(\beta) = \frac{\mathbf{M}_{ea} \mathbf{k}_{e}^{-\beta}}{\sum_{e' = 1}^{N_e} \mathbf{M}_{e'a} \mathbf{k}_{e'}^{-\beta}}\\
+\mathbf{G}_{ae}(\alpha) = \frac{\mathbf{M}_{ea} \mathbf{k}_{a}^{-\beta}}{\sum_{a' = 1}^{N_a} \mathbf{M}_{e'a} \mathbf{k}_{a'}^{-\beta}}\\
  \end{cases}
 \end{equation}
 
-where $c'$ and $p'$ are :
-
-Here $G_{cp}$ gives the probability to jump from product p to country cin a single step, and $G_{pc}$ the probability to jump from country $c$ toproduct $p$ also in a single step.
+{\bf with $c'$ and $p'$ are XXX [to be completed]} Here $G_{ea}$ gives the probability to jump from article $a$ to editor $e$ in a single step, and $G_{ae}$ the probability to jump from editor $e$ to article $a$ also in a single step. We shall give more insights on how $\alpha$ and $\beta$ influence the random walker by analyzing the transition matrices $\mathbf{G}_{ea}(\beta)$ and $\mathbf{G}_{ae}(\alpha)$. The transition matrices depend only from the initial conditions $\mathbf{M}$ and $k_e$ and $k_a$ given by (\ref{HHinit}). Since both transition matrices have the same structure, we only consider $\alpha$  and $\mathbf{G}_{ae}(\alpha)$. $\alpha$ is the power exponent of the inverse of $k_a$, and therefore the bias depends on the possible values taken by $\alpha$. If $\alpha = 0$, we recover the zero\textsuperscript{th}. For $\alpha > 0$, the probability to jump is weighted by a concave function of the sum of editors who have modified the article. The larger $\alpha$ the less the number of editors is important to an article. On the contrary, if $\alpha < 0$ the probability to jump from an editor to an article is a positive function of the sum of editors who have modified the article. For $-1 < \alpha < 0$, the function is concave, while for $\alpha < -1$, the function is convex, which means that the more editors, the even more the weight on the article. The same considerations hold for $\beta$ and the probability $\mathbf{G}_{ea}$ to jump from an article to an editor. 
 
 
-The random walkers starting from editors jump on articles at odd steps, and back on editors from article at even steps. Figure \ref{} shows how the ranking typically converges over iterations. As shown on Figure \ref{fig:convergence}, the algorithm converges in a non-trivial way {\bf (explanation for this?)}. In the iterative solution we see how certain editors start low, but then climb in rankings. This means that they are editing few articles, but those articles are of higher quality. Likewise certain articles climb over iterations, they are edited by relatively few editors, but those editors are fitter.
+\begin{figure}[!t]
+\centering
+%%\includegraphics[width=0.9\columnwidth]{Figures/Category_Feminist_writerstriangle_matrix_corrected.png}.
+\caption{The random walkers starting from editors jump on articles at odd steps, and back on editors from article at even steps. Figure \ref{} shows how the ranking typically converges over iterations. As shown on Figure \ref{fig:convergence}, the algorithm converges in a non-trivial way {\bf (explanation for this?)}. In the iterative solution we see how certain editors start low, but then climb in rankings. This means that they are editing few articles, but those articles are of higher quality. Likewise certain articles climb over iterations, they are edited by relatively few editors, but those editors are fitter.
+}
+\label{fig:convergence}
+\end{figure}
 
-WIth the following balance condition,
-
-\begin{equation}
-\mathbf{G}_{pc} \mathbf{w}^*_c = \mathbf{G}_{cp} \mathbf{w}^*_p
-\end{equation}
-
-An analytical solution can be found \cite{caldarelli}
+If the balance condition $\mathbf{G}_{pc} \mathbf{w}^*_e = \mathbf{G}_{cp} \mathbf{w}^*_a$
+%\begin{equation}
+%\mathbf{G}_{pc} \mathbf{w}^*_e = \mathbf{G}_{cp} \mathbf{w}^*_a
+%\end{equation}
+is applied, an analytical solution can be derived \cite{caldarelli}, which is given by,
 
 \begin{equation}
 \begin{cases}
- w^*_c = A(\sum^{N_p}_{p=1} M_{cp}k_p^{-\alpha})k_c^{-\beta} \\
-w^*_p = B(\sum^{N_c}_{c=1} M_{cp}k_c^{-\beta})k_p^{-\alpha}
+ w^*_e = A(\sum^{N_a}_{p=1} M_{cp}k_a^{-\alpha})k_e^{-\beta} \\
+w^*_a = B(\sum^{N_e}_{c=1} M_{cp}k_e^{-\beta})k_a^{-\alpha}.
 \end{cases}
 \end{equation}
-
-
 
 
 %\begin{figure}[!t]
@@ -89,10 +82,6 @@ w^*_p = B(\sum^{N_c}_{c=1} M_{cp}k_c^{-\beta})k_p^{-\alpha}
 %\label{fig:convergence}
 %\end{figure}
 
-that we use onwards. Note that in the case $\alpha = \beta = 0$, the analytical solution is nothing else that the zero$^{th}$..
+that we use onwards. It is important to note a crucial difference in the way we apply the weighted random walk model in the case of open collaboration compared to the countries-products problem. In \cite{caldarelli2012network}, $w^*_p$ is a measure of ubiquity (i.e. dis-quality) because many countries can sell the product, while here $w^*_a$ is also a measure of ubiquity in the sense that many editors have modified the article. In the case of open collaboration, $w^*_a$ is a measure of quality.
 
-While it relies on the same principles as in \cite{caldarelli2012network}, our proposed model is conceptually different : our ``products" are Wikipedia articles, which are not the basis for competitions but rather for cooperation. Editors enrich the articles together to make best articles. However, like countries, editors have limited capabilities and limited resources (e.g., time), which force them make choices on their contributions.
-
-
-say the intuition about $\alpha$ and $\beta$.
-
+Our aim here is to calibrate $\alpha$ and $\beta$ for various categories of articles on Wikipedia against some exogenous metrics of editors' expertise and articles' quality, to understand how the biases can inform on the emergence of respectively expertise and quality.
